# calculator

./: index.html  index.js  styles.css
.github/workflows/: release.yml
calculator-win/: Cargo.toml
calculator-win/src/: main.rs
