[package]
name = "calculator-win"
version = "1.0.0"
edition = "2021"
description = "TI BA II Plus | Scientific | Graphing Calculator - Windows App"
authors = ["Calculator App"]

[[bin]]
name = "calculator"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.27"
egui_plot = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
